# gpt-cli

./: Cargo.toml  README.md
src/: api.rs  chat.rs  config.rs  main.rs
