[package]
name = "gpt-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
text_io = "0.1.12"
tokio = { version = "1.36.0", features = ["full"] }
